1. 关闭创建集群接口 2. 不显示集群相关的 UI

--- a/apollo-portal/src/main/resources/static/app/setting.html
+++ b/apollo-portal/src/main/resources/static/app/setting.html
@@ -39,7 +39,7 @@
                 <section class="form-horizontal">
                     <h5>管理员
                         <small>
-                            (项目管理员具有以下权限: 1. 创建Namespace 2. 创建集群 3. 管理项目、Namespace权限)
+                            (项目管理员具有以下权限: 1. 创建Namespace 2. 管理项目、Namespace权限)
                         </small>
                     </h5>
                     <hr>
