--- a/apollo-portal/src/main/resources/static/config/diff.html
+++ b/apollo-portal/src/main/resources/static/config/diff.html
@@ -51,12 +51,12 @@
                 <div class="alert-info alert no-radius">
                     <strong>Tips:</strong>
                     <ul>
-                        <li>通过比较配置功能，可以查看多个环境、集群间的配置差异</li>
+                        <li>通过比较配置功能，可以查看多个环境间的配置差异</li>
                     </ul>
                 </div>
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">要比较的集群</label>
+                        <label class="col-sm-2 control-label">要比较的环境</label>
                         <div class="col-sm-6">
                             <apolloclusterselector apollo-app-id="pageContext.appId" apollo-default-all-checked="false"
                                                    apollo-select="collectSelectedClusters"
