--- a/apollo-portal/src/main/resources/static/config/sync.html
+++ b/apollo-portal/src/main/resources/static/config/sync.html
@@ -46,7 +46,7 @@
                 <div class="alert-info alert no-radius">
                     <strong>Tips:</strong>
                     <ul>
-                        <li>通过同步配置功能，可以使多个环境、集群间的配置保持一致</li>
+                        <li>通过同步配置功能，可以使多个环境间的配置保持一致</li>
                         <li>需要注意的是，同步完之后需要发布后才会对应用生效</li>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">同步到那个集群</label>
+                        <label class="col-sm-2 control-label">同步到那个环境</label>
                         <div class="col-sm-6">
                             <apolloclusterselector apollo-app-id="pageContext.appId" apollo-default-all-checked="true"
                                                    apollo-select="collectSelectedClusters"
