--- a/apollo-portal/src/main/resources/static/delete_app_cluster_namespace.html
+++ b/apollo-portal/src/main/resources/static/delete_app_cluster_namespace.html
@@ -63,7 +63,7 @@
             </section>
 
             <!-- delete cluster -->
-            <section class="row">
+            <section class="row" style="display: none">
                 <h5>删除集群
                     <small>
                         (由于删除集群影响面较大，所以现在暂时只允许系统管理员删除，请确保没有客户端读取该集群的配置后再做删除动作)
