--- a/apollo-portal/src/main/resources/static/app.html
+++ b/apollo-portal/src/main/resources/static/app.html
@@ -75,7 +75,7 @@
                             <br>
                             <small>(应用负责人默认具有项目管理员权限，</small>
                             <br>
-                            <small>项目管理员可以创建Namespace和集群、分配用户权限)</small>
+                            <small>项目管理员可以创建Namespace、分配用户权限)</small>
 
                         </div>
                     </div>
