--- a/apollo-portal/src/main/resources/static/namespace.html
+++ b/apollo-portal/src/main/resources/static/namespace.html
@@ -81,7 +81,7 @@
                                 <label class="form-control-static" ng-bind="appId"></label>
                             </div>
                         </div>
-                        <div class="form-horizontal" ng-show="type == 'link'">
+                        <div class="form-horizontal" ng-show="type == 'link'" style="display: none">
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">
                                     <apollorequiredfield></apollorequiredfield>
